--- a/omnifood-css.css
+++ b/omnifood-css.css
@@ -36,17 +36,99 @@ margin:0 auto;
 /* headings */
 /* ------------------------------*/
 
+/* h1,h2{
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+} */
+
 .hero-text-box h1{
 margin-top: 0;
 margin-bottom: 20px;
 color: #fff;
 /* 這裏的字體大小用百分比，是為了相對於一開始設定font-size: 20px;，以他的百分比來計算 */
 font-size: 240%;
-font-weight: 400;
+font-weight: 300;
 letter-spacing: 1px;
  text-transform: uppercase; /*將字母改為大寫 */
  word-spacing: 3px;
 }
+
+.section-features h2{
+  font-size: 180%;
+  font-weight: 300;
+  text-align: center;
+  letter-spacing: 1px;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  word-spacing: 3px;
+}
+/* 這裏的底線，他是設定block，讓他可以自動斷行 */
+.section-features h2::after{
+  content: '';
+  /* position: absolute; */
+  display: block;
+  width: 100px;
+  height: 2px;
+/* border: 2px solid  #e67e22 ; */
+/* bottom: 0; */
+background-color: #e67e22  ;
+margin: 30px auto 0px auto;
+
+
+}
+
+.section-features h3{
+  font-weight: 300;
+  font-size: 110%;
+  text-transform: uppercase;
+  
+  margin-bottom: 15px;
+}
+
+/* ------------------------------ */
+/* paragraphs */
+/* ------------------------------*/
+
+.section-features .long-copy{
+width: 70%;
+/* 總寬100%,左邊設置15%，就會平均 */
+margin-left: 15%;
+
+/* line-height: 1.3; */
+line-height: 145%; /*120-145%最合適 */
+/* word-spacing: 1px; */
+}
+.section-features .items p{
+  line-height: 145%;
+  font-size:90% ;
+}
+
+
+
+/* ------------------------------ */
+/* items */
+/* ------------------------------*/
+.section-features .items {
+  padding:1% ;
+
+}
+
+
+/* ------------------------------ */
+/* icons */
+/* ------------------------------*/
+.section-features .icon-big{
+display: block;
+  font-size: 350%;
+  color: #e67e22;
+  margin-bottom: 10px;
+  font-weight: 100;
+
+}
+
+
+
 
 /* ------------------------------ */
 /* buttons */
@@ -180,3 +262,14 @@ transform: scale(1);
 /* .main-nav li:hover a{
   color:#e67e22;
 } */
+
+/* ------------------------------ */
+/* section-features */
+/* ------------------------------*/
+
+.section-features{
+  padding:40px 0;
+}
+
+
+
