--- a/omnifood-css.css
+++ b/omnifood-css.css
@@ -98,6 +98,8 @@ margin-left: 15%;
 /* line-height: 1.3; */
 line-height: 145%; /*120-145%最合適 */
 /* word-spacing: 1px; */
+
+margin-bottom: 30px;
 }
 .section-features .items p{
   line-height: 145%;
@@ -268,8 +270,46 @@ transform: scale(1);
 /* ------------------------------*/
 
 .section-features{
-  padding:40px 0;
+  padding:60px 0 40px 0;
 }
 
+/* ------------------------------ */
+/* section-maels */
+/* ------------------------------*/
+/* 
+.section-maels{
+width: 100%;
+} */
+.section-meals{
+  padding: 0;
+  
+}
 
+.meals-showcase{
+  list-style: none;
+  display: block;
+  width: 100%;
+  
 
+}
+.meals-showcase li{
+  float: left;
+  width: 25%;
+}
+.meals-showcase figure{
+  width: 100%;
+  overflow: hidden;
+  background-color:#000;
+
+}
+.meals-showcase figure img{
+  width: 100%;
+  vertical-align: middle;
+transform: scale(1.15);
+transition: transform .5s ,opicity .5s;
+opacity: 0.7;
+}
+.meals-showcase figure:hover img{
+  transform: scale(1);
+  opacity: 1;
+}
