--- a/omnifood-css.css
+++ b/omnifood-css.css
@@ -263,6 +263,7 @@ header{
 background-size: cover;
 background-position: center; */
   height: 100vh;
+  background-attachment: fixed;
 }
 
 
@@ -473,11 +474,46 @@ opacity: 0.7;
 /* section-testimonials */
 /* ------------------------------*/
 .section-testimonials {
-  background:linear-gradient(0deg,rgba(0,0,0,.7),rgba(0,0,0,.7)) center center, url(./Omnifood\ Contents/back-customers.jpg)no-repeat center center/cover ;
+  background:linear-gradient(0deg,rgba(0,0,0,.8),rgba(0,0,0,.8)) center center, url(./Omnifood\ Contents/back-customers.jpg)no-repeat center center/cover ;
   color: #fff;
   background-attachment: fixed;
 }
 
+
+
 .section-testimonials blockquote{
-  color: #fff;
+  font-style: italic;
+  line-height: 140%;
+  position: relative;
+  margin-top: 40px;
+}
+
+.section-testimonials blockquote:before{
+ content:"\201C";
+ font-size:500%;
+ display: block;
+
+position: absolute;
+top: -5px;
+left: -5px;
+}
+
+.section-testimonials cite{
+  font-size: 90%;
+  display: block;
+  margin-top: 25px;
+}
+.section-testimonials img{
+  border-radius: 50%;
+  height: 50px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+
+/* ------------------------------ */
+/* section-plans */
+/* ------------------------------*/
+.section-plans li{
+
 }
