--- a/omnifood-css.css
+++ b/omnifood-css.css
@@ -216,7 +216,7 @@ display: block;
 
 /* 讓連結與點選後會改變狀態的這情形，不要發生 */
 
-.btn:link,.btn:visited{
+.btn:link,.btn:visited , input[type=submit]{
   display: inline-block;
   text-decoration: none;
 padding: 10px 15px;
@@ -227,7 +227,7 @@ border-radius: 200px;
 }
 
 
-.btn-full:link,.btn-full:visited{
+.btn-full:link,.btn-full:visited,input[type=submit]{
   /* UI flat color tool */
   background-color: #e67e22;
   border: 1px solid #e67e22 ;
@@ -241,12 +241,12 @@ border-radius: 200px;
 
 }
 
-.btn:hover,.btn:active{
+.btn:hover,.btn:active,input[type=submit]:hover,input[type=submit]:active{
 
  background-color: #cf6d17;
 
 }
-.btn-full:hover,.btn-full:active{
+.btn-full:hover,.btn-full:active,input[type=submit]:hover,input[type=submit]:active{
   /* UI flat color tool */
   
   border: 1px solid #cf6d17 ;
@@ -589,4 +589,110 @@ font-weight: 300;
   line-height: 1;
   text-align: center;
   border-bottom: none;
+}
+/* ------------------------------ */
+/* section-form */
+/* ------------------------------*/
+
+.section-form{
+ width: 60%;
+ margin: 0 auto; 
+}
+
+/* input的checkbox,sumit，不需要寬度100% */
+
+input[type=text],input[type=email],select,textarea{
+  width: 100%;
+  border-radius: 3px;
+  padding: 7px;
+  border: 1px solid #ccc;
+}
+
+/* 在button區修改
+ input[type=submit]{
+
+} */
+
+textarea{
+  height: 100px;
+}
+input[type=checkbox]{
+  margin: 10px 5px 10px 0;
+}
+*:focus{
+  outline: none;
+}
+
+/* ------------------------------ */
+/* footer */
+/* ------------------------------*/
+
+footer{
+  background-color: #333;
+  padding: 50px;
+  font-size: 80%;
+}
+footer .footer-nav{
+  list-style: none;
+  float: left;
+}
+.socilmedia-link{
+  list-style: none;
+  float: right;
+}
+.footer-nav li,.socilmedia-link li{
+  display: inline-block;
+  margin-right: 20px;
+}
+
+/* 去除最右邊的margin */
+
+.footer-nav li:last-child,.socilmedia-link li:last-child{
+  margin-right: 0px;
+}
+
+.footer-nav li a:link ,.footer-nav li a:visited, .socilmedia-link li a:link ,.socilmedia-link li a:visited{
+ text-decoration: none;
+ border: none;
+ color: #888;
+ transition: color .3s;
+}
+
+
+.footer-nav li a:hover ,.footer-nav li a:active{
+  color: #ddd;
+
+}
+
+.socilmedia-link li a:link,.socilmedia-link  li a:visited{
+ font-size: 160%;
+ 
+}
+
+
+footer p{
+  color:#888;
+  text-align: center;
+  
+  margin-top: 20px;
+}
+
+.logo-instagram,
+.logo-google,
+.logo-twitte,
+.logo-facebook{
+transition: color .3s;
+}
+
+.logo-instagram:hover{
+  color: #517fa4;
+}
+.logo-google:hover{
+  color: #dd4b39;
+}
+.logo-twitte:hover{
+  color: #00aced;
+}
+.logo-facebook:hover{
+  color: #3b5998;
 }
