--- a/css/hamburger-style.css
+++ b/css/hamburger-style.css
@@ -3,5 +3,144 @@
   padding: 0;
 }
 .container{
+  font-family:'Montserrat',sans-serif;
+}
+
+/* 讓版面佔滿 */
+.banner{
+  width: 100%;
+  height: 100vh;
+  background:linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .8)), url(/hamburger-images/banner-bg.jpeg) center no-repeat;
+  background-size: cover;
+}
+
+.logo{
+  width: 80px;
+height: 80px;
+position: fixed;
+top: 20px;
+left:50px;
+}
+.logo  img{
+width: 100%;
+
+}
+.hamburger-menu{
+  width: 35px;
+  height: 30px;
+  /* background-color: #fff; */
+  position: fixed;
+  top: 40px;
+  right: 50px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+
+  z-index: 100;
+}
+
+.line{
+  width: inherit;
+  height: 5px;
   
+  background-color: #16c3cf;
+  border-radius: 25px;
+}
+.line-2{
+  height: 3px;
+}
+
+/* 置中於版面 */
+.btn-wrapper{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  perspective: 1000px;
+}
+/* 3d按鈕 */
+.banner-btn{
+  width: 350px;
+  height: 100px;
+  background: linear-gradient(#16c3cf,#156459);
+  border:none;
+  outline: none;
+  /* 字的調整 */
+  font-family: 'Slabo 27px',serif;
+  font-size: 35px;
+  text-transform: uppercase;
+ letter-spacing: 4px;
+ color: #fff;
+ text-shadow: 0 10px 10px #000;
+ cursor: pointer;
+
+ transform: rotatex(70deg) rotateZ(30deg);
+
+ transform-style: preserve-3d;
+
+ transition: transform .5s;
+
+
+}
+
+.banner-btn:hover{
+  transform:rotateX(30deg) rotateZ(0deg) ;
+}
+
+.banner-btn::before{
+  content: '';
+  width: 100%;
+  height: 15px;
+  background-color: #156469;
+  position: absolute;
+  bottom: 0px;
+ right: 0px;
+
+  transform: rotateX(90deg);  /*會使他消失 */
+
+  transform-origin:bottom ;
+
+}
+.banner-btn::after{
+  content: '';
+  width: 15px;
+  height: 100%;
+  background-color: #16c3cf;
+  position: absolute;
+  top: 0px;
+ right: 0px;
+
+  transform: rotateY(-90deg);  /*會使他消失 */
+
+  transform-origin:right;
+
+}
+
+.top-nav{
+height: 15vh;
+width: 100%;
+background:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url(/hamburger-images/nav-bg.jpeg) no-repeat  50% 0px;  /* 50%:x軸要在中間 ; 0px: y軸，是希望圖片可以放在最上面 */
+background-size: cover;
+position: fixed;
+top: 0;
+
+/* 此與.hamburger-menu，同樣都用position: fixed; 會使後面覆蓋前面的，所以要使用z-index(數字大在前面) */
+
+z-index: 50;
+}
+.nav-list{
+  background-color: #ccc;
+list-style: none;
+width: 80%;
+margin: auto;
+height: inherit;
+
+/* 使他水平 */
+
+display: flex;
+justify-content: space-evenly;
+align-items:center;
+
 }
