--- a/css/hamburger-style.css
+++ b/css/hamburger-style.css
@@ -20,6 +20,8 @@ height: 80px;
 position: fixed;
 top: 20px;
 left:50px;
+
+ z-index: 100;
 }
 .logo  img{
 width: 100%;
@@ -47,10 +49,34 @@ width: 100%;
   
   background-color: #16c3cf;
   border-radius: 25px;
+   
+  transform-origin: right;
+  
+  transition: transform .5s;
+
 }
 .line-2{
   height: 3px;
 }
+
+
+
+
+.change .line-1{
+  transform: rotateZ(-45deg);
+}
+
+.change .line-2{
+  transform: translate(5px,20px);
+}
+
+.change .line-3{
+transform: rotateZ(45deg);
+}
+
+
+
+
 
 /* 置中於版面 */
 .btn-wrapper{
@@ -124,12 +150,26 @@ width: 100%;
 background:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url(/hamburger-images/nav-bg.jpeg) no-repeat  50% 0px;  /* 50%:x軸要在中間 ; 0px: y軸，是希望圖片可以放在最上面 */
 background-size: cover;
 position: fixed;
-top: 0;
+
+
+/* 將背景調回來後，要重新設定top位置<讓他消失 */
+
+
+top: -15vh;
 
 /* 此與.hamburger-menu，同樣都用position: fixed; 會使後面覆蓋前面的，所以要使用z-index(數字大在前面) */
 
 z-index: 50;
+
+transition: top .4s ;
 }
+
+
+.change .top-nav{
+  top:0;
+}
+
+
 .nav-list{
   /* background-color: #ccc; */
 list-style: none;
@@ -144,6 +184,10 @@ justify-content: space-evenly;
 align-items:center;
 
 }
+
+
+
+
 
 /* .nav-link 上層要設置perspective */
 
@@ -195,6 +239,7 @@ transform-origin: top;
 
 }
 
+/* ***************ddd******************** */
 
 .bottom-nav{
   width: 100%;
@@ -208,8 +253,15 @@ background-size: cover;
 
 /* 調整圖片錯位問題 */
 position:fixed;
-bottom: 0;
 
+/* 將背景調回來後，要重新設定bottom位置<讓他消失 */
+
+bottom: -85vh;
+transition: bottom .4s ;
+}
+
+.change .bottom-nav{
+  bottom: 0;
 }
 
 .icons{
@@ -227,8 +279,132 @@ bottom: 0;
 
 }
 
+.icon-item{
+  perspective: 1000px;
+}
+
+  .icon-link{
+  width: 200px;
+  height: 200px;
+
+  border:8px solid #fff ;
+
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  
+  text-decoration: none;
+
+  border-radius: 5px; 
+
+  margin: 20px;
+ 
+  transform-style: preserve-3d;
+
+
+}  
+
+.icon-link:hover{
+  transform: rotateY(35deg);
+}
+
+ .icon-link::before{
+content: '';
+height:25px ;
+width: 5px;
+background-color: #fff;
+position: absolute;
+top: 0;
+
+
+} 
+
+ .icon-link::after{
+content: '';
+height:25px ;
+width: 5px;
+background-color: #fff;
+position: absolute;
+bottom: 0;
+
+
+} 
+
+
 
 .icon-link i{
  color: #fff;
  font-size: 60px;
+
+
+  width: 150px;
+ height: 150px;
+ background-color: #555;
+
+ display: flex;
+ justify-content: center;
+ align-items: center;
+
+ border: 3px solid #fff;
+ text-shadow: 0 10px 20px rgba(0, 0, 0, .5); 
+
+ transition: all .5s ;
+
+ position: relative;
+
+  /* 讓icon的背景色藏起來 */
+
+  overflow: hidden;
+
+} 
+
+.icon-link:hover i{
+  transform: rotateY(-70deg);
+ /* 注意並非35deg */
+
+ text-shadow: 10px 10px 20px rgba(0, 0, 0, .5); 
+
+
+
+}
+
+.icon-link i::after{
+  content: '';
+  height: 100%;
+  width: 100%;
+  /* background-color: red; */
+  position: absolute;
+
+  top:-130%;
+  right:-130% ;
+  border-radius: 100%;
+
+  z-index: -1;
+  /* transition: all .5s; */
+}
+
+.icon-item:nth-child(1) .icon-link i::after{
+  background-color: #3b5999;
+}
+
+.icon-item:nth-child(2) .icon-link i::after{
+  background-color: #cd201f;
+}
+
+.icon-item:nth-child(3) .icon-link i::after{
+  background-color: #55acee;
+}
+
+
+
+.icon-item:nth-child(4) .icon-link i::after{
+  background-color: #dd4b39;
+}
+
+/* 讓顏色回到原來的位置 */
+.icon-link:hover i::after{
+  top: 0;
+  right: 0;
+  border-radius: 0;
+
 }
