--- a/css/hamburger-style.css
+++ b/css/hamburger-style.css
@@ -10,7 +10,7 @@
 .banner{
   width: 100%;
   height: 100vh;
-  background:linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .8)), url(/hamburger-images/banner-bg.jpeg) center no-repeat;
+  background:linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .8)), url(../h-images/banner-bg.jpeg) center no-repeat;
   background-size: cover;
 }
 
@@ -147,10 +147,10 @@ transform: rotateZ(45deg);
 .top-nav{
 height: 15vh;
 width: 100%;
-background:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url(./hamburger-images/nav-bg.jpeg) no-repeat  50% 0px;  /* 50%:x軸要在中間 ; 0px: y軸，是希望圖片可以放在最上面 */
+background:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url(../h-images/nav-bg.jpeg) no-repeat  50% 0px;  /* 50%:x軸要在中間 ; 0px: y軸，是希望圖片可以放在最上面 */
 background-size: cover;
 position: fixed;
-
+/* background: url(./ham); */
 /* 將背景調回來後，要重新設定top位置<讓他消失 */
 
 
@@ -245,7 +245,7 @@ transform-origin: top;
 /* 因為top-nav高度是15vh */
 
   height: 85vh;
-background:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url(/hamburger-images/nav-bg.jpeg) no-repeat  50% -15vh;  
+background:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url(../h-images/nav-bg.jpeg) no-repeat  50% -15vh;  
 
 
 background-size: cover;
